--- a/BuyVegetablesTreasure/FS/Main/分类/Root/View/FSCommodityTVCell.xib
+++ b/BuyVegetablesTreasure/FS/Main/分类/Root/View/FSCommodityTVCell.xib
@@ -15,7 +15,7 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="110"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="375" height="109.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="375" height="109"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="H7N-Ok-X5C">
@@ -25,7 +25,7 @@
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QOY-J1-oNT">
                         <rect key="frame" x="102" y="8" width="265" height="21"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
@@ -36,39 +36,55 @@
                         <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fOC-fp-3SU">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fOC-fp-3SU">
                         <rect key="frame" x="290" y="82" width="9" height="17"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rpr-fe-nB0">
+                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rpr-fe-nB0">
                         <rect key="frame" x="304" y="82" width="18" height="18"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="18" id="fRI-FK-HbX"/>
-                            <constraint firstAttribute="height" constant="18" id="pxT-lD-Wrn"/>
-                        </constraints>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <state key="normal" image="加"/>
+                        <connections>
+                            <action selector="plusButtonTouchUpInside:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="C6d-oy-XLy"/>
+                        </connections>
                     </button>
-                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vU0-No-7P7">
+                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vU0-No-7P7">
                         <rect key="frame" x="267" y="80" width="18" height="22"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <state key="normal" image="减"/>
+                        <connections>
+                            <action selector="minusButtonTouchUpInside:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="PwJ-4g-LQy"/>
+                        </connections>
                     </button>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="￥99.00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mzz-Kl-AV3">
                         <rect key="frame" x="102" y="65" width="63" height="21"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                         <color key="textColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="72c-UG-o33">
+                        <rect key="frame" x="102" y="84" width="42" height="21"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                        <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
-                <constraints>
-                    <constraint firstItem="Rpr-fe-nB0" firstAttribute="leading" secondItem="fOC-fp-3SU" secondAttribute="trailing" constant="5" id="XkT-ae-91a"/>
-                    <constraint firstItem="vU0-No-7P7" firstAttribute="centerY" secondItem="Rpr-fe-nB0" secondAttribute="centerY" id="bNd-NM-M5y"/>
-                    <constraint firstItem="fOC-fp-3SU" firstAttribute="leading" secondItem="vU0-No-7P7" secondAttribute="trailing" constant="5" id="kYv-la-hYz"/>
-                    <constraint firstItem="fOC-fp-3SU" firstAttribute="centerY" secondItem="Rpr-fe-nB0" secondAttribute="centerY" id="meD-MS-WJV"/>
-                </constraints>
             </tableViewCellContentView>
+            <connections>
+                <outlet property="countLabel" destination="fOC-fp-3SU" id="tR1-ks-p9P"/>
+                <outlet property="descLabel" destination="Vfi-3J-XHl" id="YHc-H6-rvf"/>
+                <outlet property="iconImageView" destination="H7N-Ok-X5C" id="7zK-ZJ-U6O"/>
+                <outlet property="minusButton" destination="vU0-No-7P7" id="pkZ-c4-iQ2"/>
+                <outlet property="plusButton" destination="Rpr-fe-nB0" id="XiA-0e-5mB"/>
+                <outlet property="priceLabel" destination="Mzz-Kl-AV3" id="egZ-YE-84M"/>
+                <outlet property="titleLabel" destination="QOY-J1-oNT" id="FOL-MS-hAY"/>
+                <outlet property="vipLabel" destination="72c-UG-o33" id="4XT-pN-wCk"/>
+            </connections>
             <point key="canvasLocation" x="32.5" y="89"/>
         </tableViewCell>
     </objects>
