--- a/BuyVegetablesTreasure/FS/Main/购物车/Root/View/FSShoppingCartBottomView.xib
+++ b/BuyVegetablesTreasure/FS/Main/购物车/Root/View/FSShoppingCartBottomView.xib
@@ -26,6 +26,9 @@
                     <state key="selected" title="全选" image="shoppingcart_checked">
                         <color key="titleColor" red="0.15686274510000001" green="0.15686274510000001" blue="0.15686274510000001" alpha="1" colorSpace="calibratedRGB"/>
                     </state>
+                    <connections>
+                        <action selector="selectAllButtonTouchUpInside:" destination="-1" eventType="touchUpInside" id="17l-ZG-BoO"/>
+                    </connections>
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="合计:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gf4-XD-6fW">
                     <rect key="frame" x="84" y="20" width="52" height="21"/>
@@ -52,6 +55,9 @@
                             <state key="normal" title="结算">
                                 <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
+                            <connections>
+                                <action selector="orderButtonTouchUpInside:" destination="-1" eventType="touchUpInside" id="Ept-Pw-6SS"/>
+                            </connections>
                         </button>
                     </subviews>
                     <color key="backgroundColor" red="0.52156862749999999" green="0.74117647060000003" blue="0.1960784314" alpha="1" colorSpace="calibratedRGB"/>
