--- a/BuyVegetablesTreasure/FS/Main/搜索/搜索结果页/View/FSSearchResultTVCell.xib
+++ b/BuyVegetablesTreasure/FS/Main/搜索/搜索结果页/View/FSSearchResultTVCell.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11542" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -54,11 +54,17 @@
                         <rect key="frame" x="267" y="0.0" width="18" height="22"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <state key="normal" image="减"/>
+                        <connections>
+                            <action selector="minusButtonTouchUpInside:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="TE4-ka-bUX"/>
+                        </connections>
                     </button>
                     <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LTc-kZ-wII">
                         <rect key="frame" x="314" y="0.0" width="18" height="18"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <state key="normal" image="加"/>
+                        <connections>
+                            <action selector="plusButtonTouchUpInside:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="DIN-r9-0uW"/>
+                        </connections>
                     </button>
                 </subviews>
             </tableViewCellContentView>
