--- a/BuyVegetablesTreasure/Controllers/Payment/Cell/PaymentCell.xib
+++ b/BuyVegetablesTreasure/Controllers/Payment/Cell/PaymentCell.xib
@@ -1,8 +1,11 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11201" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -12,25 +15,29 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="252"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <frame key="frameInset" width="320" height="251.66666666666666"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="251"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="选择支付方式" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WyS-bI-FE3">
-                        <frame key="frameInset" minX="47" minY="20" width="250" height="20"/>
+                        <rect key="frame" x="47" y="20" width="250" height="20"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <color key="textColor" red="0.98798537254333496" green="0.30799436569213867" blue="0.030261484906077385" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="选择支付方式图标.png" translatesAutoresizingMaskIntoConstraints="NO" id="l0X-dT-r1c">
+                        <rect key="frame" x="15" y="19" width="22" height="22"/>
+                        <color key="tintColor" red="0.52156862749999999" green="0.74117647060000003" blue="0.1960784314" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="22" id="vgI-Yy-xoj"/>
                             <constraint firstAttribute="width" constant="22" id="x63-SW-8Cd"/>
                         </constraints>
                     </imageView>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="i7Z-Wy-SO0">
+                        <rect key="frame" x="0.0" y="55" width="320" height="55"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="微信支付" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RR8-6N-cMY">
+                                <rect key="frame" x="55" y="17.5" width="110" height="20"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="110" id="84z-mU-z8O"/>
                                     <constraint firstAttribute="height" constant="20" id="nJ8-7Z-QcM"/>
@@ -40,12 +47,14 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="微信支付图标.png" translatesAutoresizingMaskIntoConstraints="NO" id="l4a-wZ-V2p">
+                                <rect key="frame" x="20" y="17.5" width="20" height="20"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="20" id="DTt-Yo-88z"/>
                                     <constraint firstAttribute="width" constant="20" id="Nwg-NV-umM"/>
                                 </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WnL-XK-WAh">
+                                <rect key="frame" x="286" y="16.5" width="14" height="22"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="14" id="AkK-KD-l8s"/>
                                     <constraint firstAttribute="height" constant="22" id="lI6-nN-oON"/>
@@ -71,14 +80,17 @@
                         </constraints>
                     </view>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gbs-KX-ATW">
+                        <rect key="frame" x="0.0" y="110" width="320" height="55"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="支付宝图标.png" translatesAutoresizingMaskIntoConstraints="NO" id="Yrb-l4-k82">
+                                <rect key="frame" x="20" y="17.5" width="20" height="20"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="20" id="7MB-To-AKf"/>
                                     <constraint firstAttribute="height" constant="20" id="GBi-15-pzT"/>
                                 </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lC9-rF-wjh">
+                                <rect key="frame" x="286" y="16.5" width="14" height="22"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="22" id="2WN-07-vye"/>
                                     <constraint firstAttribute="width" constant="14" id="ikR-VY-pjN"/>
@@ -92,6 +104,7 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="支付宝支付" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VJU-aO-bVd">
+                                <rect key="frame" x="55" y="17.5" width="100" height="20"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="100" id="1u9-oR-lms"/>
                                     <constraint firstAttribute="height" constant="20" id="mnH-6u-9Xq"/>
